--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ REACT_APP_storageBucket=fireblog-context.appspot.com
 REACT_APP_messagingSenderId=287702818506
 REACT_APP_appId=1:287702818506:web:7504d5de41f8f64445de33
 REACT_APP_TMDB_KEY=32e2256d77263eb3dc613bfabcba82d8
+#  databaseURL: "https://fireblog-context-default-rtdb.firebaseio.com",
